Further fixups * styling so paragraphs in the table don't take too much space * more place for examples * some little errors corrected * oh and fat styling for <strong> elements

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -192,6 +192,10 @@ table {
   border: 1px solid darkgray;
 }
 
+table p {
+  margin: 5px;
+}
+
 th {
   font-weight: 500;
   border: 1px solid darkgray;
@@ -212,17 +216,25 @@ th.usage {
 }
 
 th.example {
-  width: 200px;
+  width: 250px;
 }
 
 th.description {
-  width: 460px;
+  width: 410px;
 }
 
 
 form {
   background: #f2f2f2;
   padding: 20px;
+}
+
+strong {
+  font-weight: bold;
+}
+
+em {
+  font-style: italic;
 }
 
 
